// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePasswordForm /> should render 1`] = `
<form
  className="form-horizontal"
  onSubmit={[MockFunction]}
>
  <Uncontrolled(Panel)
    id="capco_horizontal_form"
  >
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <div
        className="panel-heading profile-header"
      >
        <h1>
          <FormattedMessage
            id="modify-password"
            values={Object {}}
          />
        </h1>
      </div>
    </PanelHeading>
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <ChangePasswordForm__Container>
        <div
          className="flex-column"
        >
          <div
            className="no-border horizontal_field_with_border_top"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="password-form-current"
            >
              <FormattedMessage
                id="form.current_password"
                values={Object {}}
              />
            </label>
            <div>
              <Field
                component={[Function]}
                divClassName="col-sm-6"
                id="password-form-current"
                name="current_password"
                type="password"
              />
            </div>
          </div>
          <div
            className="mb-10 mtn-10"
          >
            <div
              className="col-sm-3"
            />
            <a
              href="/resetting/request"
            >
              <FormattedMessage
                id="global.forgot_password"
                values={Object {}}
              />
            </a>
          </div>
          <div
            className="clearfix"
          />
          <div
            className="horizontal_field_with_border_top no-border"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="password-form-new"
            >
              <FormattedMessage
                id="new-password"
                values={Object {}}
              />
            </label>
            <div>
              <Connect(UserPasswordField)
                divClassName="col-sm-6 inline "
                formName="password-form"
                id="password-form-new"
                name="new_password"
              />
            </div>
          </div>
          <div
            className="clearfix"
          />
          <div
            className="horizontal_field_with_border_top no-border"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="password-form-confirmation"
            >
              <FormattedMessage
                id="confirm-password"
                values={Object {}}
              />
            </label>
            <div>
              <Field
                component={[Function]}
                divClassName="col-sm-6"
                id="password-form-confirmation"
                name="new_password_confirmation"
                type="password"
              />
            </div>
          </div>
          <div
            className="clearfix"
          />
          <div
            className="horizontal_field_with_border_top no-border"
          >
            <div
              className="col-sm-3"
            />
            <ButtonToolbar
              bsClass="btn-toolbar"
              className="col-sm-6 pl-0"
            >
              <AlertForm
                errorMessage={null}
                invalid={false}
                submitFailed={false}
                submitSucceeded={false}
                submitting={false}
                valid={true}
              />
            </ButtonToolbar>
          </div>
        </div>
      </ChangePasswordForm__Container>
    </PanelBody>
    <PanelFooter
      bsClass="panel"
    >
      <div
        className="col-sm-offset-4"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={false}
          id="profile-password-save"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
      </div>
    </PanelFooter>
  </Uncontrolled(Panel)>
</form>
`;

exports[`<ChangePasswordForm /> should render connected with france connect 1`] = `
<form
  className="form-horizontal"
  onSubmit={[MockFunction]}
>
  <Uncontrolled(Panel)
    id="capco_horizontal_form"
  >
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <div
        className="panel-heading profile-header"
      >
        <h1>
          <FormattedMessage
            id="modify-password"
            values={Object {}}
          />
        </h1>
      </div>
    </PanelHeading>
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <ChangePasswordForm__Container>
        <div
          className="flex-column"
        >
          <AppBox
            backgroundColor="blue.100"
            borderColor="blue.200"
            borderRadius={4}
            borderStyle="solid"
            borderWidth="1px"
            color="blue.900"
            mb={6}
            padding={4}
          >
            <FormattedMessage
              id="mdp-fc"
              values={Object {}}
            />
          </AppBox>
          <div
            className="no-border horizontal_field_with_border_top"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="password-form-current"
            >
              <FormattedMessage
                id="form.current_password"
                values={Object {}}
              />
            </label>
            <div>
              <Field
                component={[Function]}
                divClassName="col-sm-6"
                id="password-form-current"
                name="current_password"
                type="password"
              />
            </div>
          </div>
          <div
            className="mb-10 mtn-10"
          >
            <div
              className="col-sm-3"
            />
            <a
              href="/resetting/request"
            >
              <FormattedMessage
                id="global.forgot_password"
                values={Object {}}
              />
            </a>
          </div>
          <div
            className="clearfix"
          />
          <div
            className="horizontal_field_with_border_top no-border"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="password-form-new"
            >
              <FormattedMessage
                id="new-password"
                values={Object {}}
              />
            </label>
            <div>
              <Connect(UserPasswordField)
                divClassName="col-sm-6 inline "
                formName="password-form"
                id="password-form-new"
                name="new_password"
              />
            </div>
          </div>
          <div
            className="clearfix"
          />
          <div
            className="horizontal_field_with_border_top no-border"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="password-form-confirmation"
            >
              <FormattedMessage
                id="confirm-password"
                values={Object {}}
              />
            </label>
            <div>
              <Field
                component={[Function]}
                divClassName="col-sm-6"
                id="password-form-confirmation"
                name="new_password_confirmation"
                type="password"
              />
            </div>
          </div>
          <div
            className="clearfix"
          />
          <div
            className="horizontal_field_with_border_top no-border"
          >
            <div
              className="col-sm-3"
            />
            <ButtonToolbar
              bsClass="btn-toolbar"
              className="col-sm-6 pl-0"
            >
              <AlertForm
                errorMessage={null}
                invalid={false}
                submitFailed={false}
                submitSucceeded={false}
                submitting={false}
                valid={true}
              />
            </ButtonToolbar>
          </div>
        </div>
      </ChangePasswordForm__Container>
    </PanelBody>
    <PanelFooter
      bsClass="panel"
    >
      <div
        className="col-sm-offset-4"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={false}
          id="profile-password-save"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
      </div>
    </PanelFooter>
  </Uncontrolled(Panel)>
</form>
`;
